--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="#" class="links">VK</a>
 
     <div class="div1"> 
-        <p class="funny">Совершите покупку прямо сейчас</p>    
+        <p class="funny">Совершите покупку <br>прямо сейчас</p>    
     </div>
     <p>
         <h1>Оплата:</h1>
