--- a/index.html
+++ b/index.html
@@ -5,55 +5,49 @@
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic index</title>
+    <title>Квартирочка</title>
 </head>
 <body>
     <div class="entire-page">dd </div>
     <header> 
-        <h1>uff majic</h1>
+        <h1>Квартирочка</h1>
     </header>
 
     <p class="dollar">1$: 1,25 руб.</p>
-    <img href="#" class= "logo" src="./img/1.png" alt="cool"> 
-    <!-- <p>Watch it now and become professional Monk.</p>
-    <p>(Not clickbait)</p>
-    <p> Buy our houses bitches<br>
-        Useful links:
-    </p> -->
+    <img href="./index.html" class= "logo" src="./img/1.png" alt="cool"> 
 
     <p> 
-        Проблемы с доступом к своей квартире???????
-        <br><br><br>Что-ж, приобретите новую!!!!!!
-        <br><br><br> Мы можем вам помочь.
+        Необходима квартирочка по приемлемой цене?
+        <br><br> Мы можем вам помочь.
         <br> Позвоните:
     </p>
     <a href="#" class="links">Telegram</a>
-    <a href="#" class="links">Viber</a>
-    <a href="#" class="links">Whatsapp</a>
     <a href="#" class="links">VK</a>
+    <br>
+    <a href="./about.html" class="links">Подробнее о нас</a>
 
     <div class="div1"> 
-        <p class="funny">Совершите покупку <br>прямо сейчас</p>    
+        <p class="funny">Не превзойдённые <br>до сих пор <br><br>Попробуйте <br> и узнаете почему</p>
+            
     </div>
     <p>
         <h1>Оплата:</h1>
         Мы принимаем <p class="any" style="display: inline;">любые</p> методы оплаты. 
 
         <h1>Правда?</h1>
-        Да, даже <p class="any" style="display: inline;"> карту вашей мамы </p>
-        !!! 
+        Да, ведь мы <p class="any" style="display: inline;"> превосходны</p>
+        . 
 
         <h1>Ого!</h1>
-        <p class="any" style="display:inline">Ага! </p>
-        Так что у вас просто <p class="any" style="display:inline">нет</p> 
-        оправданий, чтобы нам <p class="any" style="display:inline">не заплатить.</p>
-    </p>
+        Ага!
+        <p class="any" style="display:inline">Вы готовы </p>
+        ? <p class="any" style="display:inline"></p>  </p>
 
     <button class="buy-btn">Купить</button>
 
     <footer class="footer">© Бебрики.</footer>
 
-    
+ 
 
     <script src="bebra.js"> </script>
 </body>
